--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.1.10",
     "swagger-ui-express": "^5.0.1",
+    "uuid": "^11.1.0",
     "validator": "^13.15.15"
   }
 }
