--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.15.1",
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "node-cron": "^4.1.1",
     "nodemon": "^3.1.10",
     "qs": "^6.14.0",
     "swagger-jsdoc": "^6.2.8",
