--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
     "node-cron": "^4.1.1",
+    "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
-    "sharp": "^0.34.2",
     "qs": "^6.14.0",
+    "sharp": "^0.34.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0",
